--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>CRUX Consulting</title>
+    <title>CRUX CC</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -110,14 +110,14 @@
             <!--Collapse content-->
             <div class="collapse navbar-toggleable-xs" id="collapseEx">
                 <!--Navbar Brand-->
-                <a class="navbar-brand" href="http://mdbootstrap.com/material-design-for-bootstrap/" target="_blank">CCC</a>
+                <a class="navbar-brand" href="index.html">CCC</a>
                 <!--Links-->
-                <ul class="nav navbar-nav">
+                <ul class="na¸v navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Consulting</a>
+                        <a class="nav-link" href="consulting.html">Consulting</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Development</a>
