--- a/development.html
+++ b/development.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>CRUX Consulting</title>
+    <title>CRUX Development</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -319,7 +319,7 @@
 
 
     <!--Footer-->
-        <div data-include="footer"></div>
+     <div data-include="footer"></div>
     <!--/.Footer-->
 
 
