--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
     <meta charset="utf-8">
@@ -124,7 +123,7 @@
                         <li>
                             <h1 class="font-color:black; h1-responsive">Crux Consulting</h1></li>
                         <li>
-                            <p>The most expertised team working for your success!</p>
+                            <p>The most expertised team, working towards your success!</p>
                         </li>
                         <li>
                         </li>
